tests/fixtures/realworld/istio/valid/case-054-RW-8-54-VirtualService-valid-with-headers-manipulation.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: header-route
  namespace: default
spec:
  hosts:
  - reviews
  http:
  - route:
    - destination:
        host: reviews
        subset: v1
    headers:
      request:
        set:
          X-Custom-Header: value
